--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="send_otp">Send OTP</string>
     <string name="verify">Verify</string>
     <string name="otp">OTP</string>
+    <string name="hint">Hint</string>
+    <string name="resend_otp">resend_otp</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="oops">Oops</string>
+    <string name="reload">Reload</string>
 </resources>
