--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="oops">Oops</string>
     <string name="reload">Reload</string>
+    <string name="username">Username</string>
+    <string name="personal_details">Personal Details</string>
+    <string name="email">Email</string>
+    <string name="country">country</string>
+    <string name="city">City</string>
+    <string name="bio">Bio</string>
+    <string name="age">Age</string>
+    <string name="submit">Submit</string>
 </resources>
