--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,20 @@
     <string name="bio">Bio</string>
     <string name="age">Age</string>
     <string name="submit">Submit</string>
+    <string name="journals">Journals</string>
+    <string name="analytics">Analytics</string>
+    <string name="calender">Calender</string>
+    <string name="settings">Settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="how_are_you">How are you?</string>
+    <string name="category">Enter Category</string>
+    <string name="select_emotions">Select Emotions</string>
+    <string name="quick_note">Quick Note</string>
+    <string name="image">Image</string>
+    <string name="video">Video</string>
+    <string name="audio">Audio</string>
+    <string name="private_string">Private</string>
+    <string name="public_string">Public</string>
+    <string name="add_journal">Add Journal</string>
+    <string name="title">Title</string>
 </resources>
